--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen,
+		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+body::-webkit-scrollbar {
+	display: none;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+body {
+	-ms-overflow-style: none;
+	scrollbar-width: none;
 }
 
-* {
-  box-sizing: border-box;
+@layer base {
+	body {
+		@apply bg-gradient-to-r from-[#040405] to-[#183949] text-gray-300;
+	}
 }
